# druid

./: .clang-tidy  .gitignore  CMakeLists.txt  DURATION_IMPLEMENTATION.md  README.md  optimization_guide.md  vcpkg.json
.github/workflows/: linux.yml  osx.yml  windows.yml
app/: CMakeLists.txt
app/arch/: CMakeLists.txt  Rectangle.ixx  Window.ixx  main.cpp
app/pong/: .qmlls.ini  CMakeLists.txt  main.cpp
app/pong/qml/: Main.qml
app/runestone/test/: CMakeLists.txt  ChessPiece.test.cpp
app/scene/: CMakeLists.txt  batched_renderer.hpp  dynamic_update_example.cpp  instanced_renderer.hpp  main.cpp  main_optimized_clean.cpp
cmake/: project_add_test.cmake
cmake/preset/: config-code-coverage.json  platform-linux.json  platform-osx.json  platform-windows.json  use-clang.json  use-gcc.json  use-msvc.json  use-vcpkg.json
cmake/scripts/: llvm_coverage.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Duration.ixx  Engine.ixx  Signal.ixx
src/core/test/: CMakeLists.txt  Duration.test.cpp
src/graphics/test/: CMakeLists.txt
src/sdl/: CMakeLists.txt  Renderer.ixx  Window.ixx
src/skia/: CMakeLists.txt  Renderer.ixx
src/widgets/: CMakeLists.txt  Widget.ixx
src/widgets/test/: CMakeLists.txt  Widget.test.cpp
